--- a/assets/css/Modern-Contact-Form.css
+++ b/assets/css/Modern-Contact-Form.css
@@ -3,7 +3,7 @@
   font-size: 16px;
   width: 200px;
   height: 50px;
-  background-color: #e74c3c;
+  background-color: #3b3939;
   border-color: transparent;
 }
 
